# mailing

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
mailing/: db.sqlite3
mailing/mailing/: asgi.py  settings.py  urls.py  validators.py  wsgi.py
mailing/rest_api/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
mailing/rest_api/migrations/: 0001_initial.py
mailing/scheduled_mailing/: apps.py
