[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["tenessy0570 <tenessy0570@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
django-rest-swagger = "^2.2.0"
python-dotenv = "^0.21.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
